--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ minecraft_version = 1.21.1
 neoforge_version = 21.1.172
 yarn_mappings_patch_version = 1.21+build.4
 veil_version = 1.3.1
+vs2_version=2.5.0-beta.2+91fd4a9c8a
+vs_core_version=1.1.0+2a62e6a823
